Refactor trading system: Introduce Order, Position, and Trade structs with associated traits for improved encapsulation and functionality. Enhance backtesting logic to support new structures, including order execution, position management, and trade closing. Update plotting and strategy modules to accommodate changes. Add comprehensive examples demonstrating order, position, and trade flow.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "Bollinger",
         "calmar",
         "chrono",
+        "Coordf",
         "drawdowns",
         "OHLCV",
         "sortino"
