Enhance backtest struct: Uncomment orders vector for order management and improve formatting for clarity. Update documentation to reflect memory optimization practices.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "cSpell.words": [
         "backtest",
+        "Backtestable",
         "backtesting",
         "backtests",
         "Bollinger",
